plang/testing/logs/false-incorrect/119/program119.p.p.out
Error at bW :- (tXnxC (B) (cb (M) (dy)) (UFL) GtDT).:1:5 error: 
bW :- (tXnxC (B) (cb (M) (dy)) (UFL) GtDT).
    ^
Error at bW :- (tXnxC (B) (cb (M) (dy)) (UFL) GtDT).:1:41 error: 
bW :- (tXnxC (B) (cb (M) (dy)) (UFL) GtDT).
                                        ^