plang/testing/logs/false-incorrect/119/program119.p.p
bW :- (tXnxC (B) (cb (M) (dy)) (UFL) GtDT).


vqebp (w2cNs (xZqz7 (m (UJxt) (p1AX eWvRq z) (b (x1 (hRz (Y)) a6r))) (xsn (Qp) Zw2Rq) mBy1) CfuQT) :- hlj.

yDmYC D W SG (Mr).


fchg (zG) (rTJ07 yDpHE ewif).
dj5H (QQ) eTvZS :- zsT9K (CC7); soGg hqA (Vnh0); z Tw (iR9CJ PVDG7 (l (Y1JR)) (r (l B qUYiI (cua WxVIu) (EN)) U M (qZ (Fbx)))) (XQmun), cbWx2 (xsJ XU) (t) DzOR wOVVD, hDbs (Cv2K) (Ie) (L); fT (IdYu) (wqlu9) (S), (((d bv0Ij O (uVz (x4 I6Hm) (U) J (Q)) (rOqTC (qvt Hp8AC (Ex) (CTi)) wa (Ew))))).


zNOX :- vjS CJT.


z0lSJ (t Wgjry).


qi (Y1Dp) (mlHb q T JC).


afl u9O.

ykaWH (zy2r h) D.

mm8q.
q6.
? gRDOo jbfI dfB, (lzm47 (COX) (o (AqK6j) z9rQ u4k), mV G (F) (VJ)), cw9l F15PY; uwz (h) MA (zBgB N (W0K) p).



